# beam-propagation

./: .gitignore
beamprop_pkg/: README.md  pyproject.toml
beamprop_pkg/beamprop/: absorbers.py  cli.py  fields.py  grids.py  hologram.py  index_profiles.py  propagators.py  utils.py
beamprop_pkg/scripts/: abc_plots.py  grin_lens_plots.py  grin_plots.py  grism_plots.py  nls_plots.py  thick_hologram.py
beamprop_pkg/tests/: test_import.py
notebooks/: scratch.ipynb
